# ndkGui

./: CMakeLists.txt  README.md
JNIHelper/: CMakeLists.txt  JNIHelper.cpp  JNIHelper.h
JUIHelper/: CMakeLists.txt  IdFactory.h  JUIBase.h  JUIView.h  JavaUI.cpp  JavaUI.h  JavaUI_Dialog.cpp  JavaUI_View.h  JavaUI_Window.cpp
jni/JNIHelper/: JNIHelper.h
jni/JUIHelper/: CMakeLists.txt  IdFactory.cpp  IdFactory.h  JUIBase.cpp  JUIBase.h  JUIButton.cpp  JUIButton.h  JUIDialog.cpp  JUIDialog.h  JUITextView.cpp  JUITextView.h  JUIView.cpp  JUIView.h  JUIWindow.cpp  JUIWindow.h  JavaUI.cpp
src/com/ndkgui/helper/: JUIButton.java  JUIDialog.java  JUIForwardingPopupWindow.java  JUIHelper.java  JUITextView.java  NDKHelper.java
